--- a/Style.css
+++ b/Style.css
@@ -1,6 +1,6 @@
 /* Creación de variables a  utilizar */
 :root {
-    --primary-color: #FFC0CB;
+    --primary-color: #Ff0080;
     --secondary-color: #f5007b;
     --text-color: #333333;;
     --background-color: #f4f4f4;
@@ -278,3 +278,4 @@ del area de Estudios realizados y experiencia laboral*/
     }
 
 }
+
